force-app/main/default/objects/Margin__c/Margin__c.object-meta.xml
<CustomObject>
    <label>Margem</label>
    <nameField>
        <label>Margem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Margens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>