force-app/main/default/objects/Margin__c/fields/AccountGroup__c.field-meta.xml
<CustomField>
    <fullName>AccountGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo De Conta</label>
    <referenceTo>AccountGroup__c</referenceTo>
    <relationshipLabel>Margens</relationshipLabel>
    <relationshipName>Margins</relationshipName>
    <type>Lookup</type>
</CustomField>