force-app/main/default/objects/Margin__c/fields/ProductHierarchy__c.field-meta.xml
<CustomField>
    <fullName>ProductHierarchy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hierarquia de Produto</label>
    <referenceTo>ProductHierarchy__c</referenceTo>
    <relationshipLabel>Margens</relationshipLabel>
    <relationshipName>Margins</relationshipName>
    <type>Lookup</type>
</CustomField>