force-app/main/default/objects/Margin__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
                <label>Aprovado</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <label>Reprovado</label>
            </value>
            <value>
                <fullName>Blocked</fullName>
                <label>Bloqueado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>