force-app/main/default/objects/Margin__c/validationRules/cidade_estado_pais_validacao.validationRule-meta.xml
<ValidationRule>
    <fullName>cidade_estado_pais_validacao</fullName>
    <active>true</active>
    <errorConditionFormula>(
  IF(ISBLANK(City__c), 0, 1) + 
  IF(ISBLANK(State__c), 0, 1) + 
  IF(ISBLANK(Country__c), 0, 1)
) &lt;&gt; 1</errorConditionFormula>
    <errorMessage>Erro: Preencha apenas um campo. Cidade, Estado ou Pais.</errorMessage>
</ValidationRule>