force-app/main/default/objects/Margin__c/validationRules/produto_e_hierarquia_validacao.validationRule-meta.xml
<ValidationRule>
    <fullName>produto_e_hierarquia_validacao</fullName>
    <active>true</active>
    <errorConditionFormula>(IF(ISBLANK(  ProductHierarchy__c  ), 0, 1) + 
 IF(ISBLANK(Product__c), 0, 1)) &lt;&gt; 1</errorConditionFormula>
    <errorMessage>Preencha apenas UM campo necessário. Produto ou hierarquia.</errorMessage>
</ValidationRule>