force-app/main/default/objects/Margin__c/listViews/Margem_Analise_Rep.listView-meta.xml
<ListView>
    <fullName>Margem_Analise_Rep</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Reprovado</value>
    </filters>
    <label>Margem Análise (Rep)</label>
</ListView>